# LookPyrenees

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AUTHORS.rst  Dockerfile  LICENSE.txt  README.md  README.rst  mypy.ini  obs_pyr.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-cd.yml  manual-push-gcr.yml
ressources/: pyrenees.dbf  pyrenees.shp  pyrenees.shx  zone_4326.dbf  zone_4326.shp  zone_4326.shx
ressources/zones/: area_polygone.dbf  area_polygone.shp  area_polygone.shx
src/LookPyrenees/: __init__.py  cli.py  download.py  manage_bucket.py
src/lookpyrenees/: __init__.py  cli.py  download.py
src/obs_pyr/: obs_pyr.py
tests/: __init__.py  test_obs_pyr.py
