# Copyright 2022 CS GROUP
# Licensed to CS GROUP (CS) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# CS licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# LookPyrenees setup configuration file

# package setup main metadata
[metadata]
name = LookPyrenees
author = Romain Buguet de Chargere
author_email = romain.buguet-de-chargere@csgroup.eu

# Flake8 configuration
[flake8]
exclude = .git, venv, build, dist,
# Add flake8 ignored rules
ignore =
# from black compatibility
extend-ignore = E203, W503, B905
max-complexity = 15
max-line-length = 120
#show-source = true
# Flake8-copyright
copyright-check = True
# errors types are not selected by default, so add them to your selection
select = E,F,W,C,B9,C4,B

[tool:isort]
profile = black